ft: Updated responsiveness

--- a/admin.html
+++ b/admin.html
@@ -15,65 +15,61 @@
             </div>
             <div class="nav-menu">
                 <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="blogs.html">Blogs</a></li>         
-                                <!-- <li><a href="login.html">Account</a></li>          -->
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>         
+                    <!-- <li><a href="login.html">Account</a></li>          -->
                 </ul>
             </div>
         </header>
         <section>
-            <div class="content-wrapper">
                 <div class="content-title">
                     <h2><span class="orangered">Admin</span> <span class="dark-orange">Dasboard</span></h2>
                 </div>
-                <div class="admin-menu">
-                    <p>My Brand</p>
-                    <ul>
-                        <li class="current-menu" ><a href="#">Dashboard</a></li>
-                        <li><a href="#">All Users</a></li>
-                        <li><a href="#">Active Users</a></li>
-                        <li><a href="#">Registered Users</a></li>
-                        <li><a href="#">All Blog Posts</a></li>
-                        <li><a href="#">New Blog Posts</a></li>
-                        <li><a href="#">New Comments</a></li>
-                    </ul>
-                </div>
-                <div class="admin-holder">
-                    <div class="admin-row1">
-                        <div class="admin">
-                            <p>All Users</p>
-                            <img src="assets/images/Users.svg" alt="Users">
-                            <p>1000</p>
-                        </div>
-                        <div class="admin">
-                            <p class="orangered">Active Users</p>
-                            <img src="assets/images/Users.svg" alt="Users">
-                            <p class="orangered">900</p>
-                        </div>
-                        <div class="admin">
-                            <p>Registered Users</p>
-                            <img src="assets/images/Users.svg" alt="Users">
-                            <p>900</p>
-                        </div>
+                <div class="admin-content">
+                    <div class="admin-menu">
+                        <p>My Brand</p>
+                        <ul>
+                            <li class="current-menu"><a href="#">Dashboard</a></li>
+                            <li><a href="admin1.html">Manage Users</a></li>
+                            <li><a href="admin2.html">Create Blog</a></li>
+                            <li><a href="blogs-management.html">Read Blogs</a></li>
+                            <li><a href="blogs-management.html">Update Blogs</a></li>
+                            <li><a href="blogs-management.html">Delete Blogs</a></li>
+                        </ul>
                     </div>
-                    <div class="admin-row2">
-                        <div class="admin">
-                            <p>All Blog Posts</p>
-                            <img src="assets/images/Blogs.svg" alt="Blogs">
-                            <p>900</p>
-                        </div>
-                        <div class="admin">
-                            <p class="orangered">New Blog Posts</p>
-                            <img src="assets/images/Blogs.svg" alt="Blogs">
-                            <p class="orangered">900</p>
-                        </div>
-                        <div class="admin">
-                            <p class="orangered">New Comments</p>
-                            <img src="assets/images/Comments.svg" alt="Blogs">
-                            <p class="orangered">900</p>
-                        </div>
+                    <div class="admin-holder">
+                            <div class="admin-box">
+                                <p>All Users</p>
+                                <img src="assets/images/Users.svg" alt="Users">
+                                <p>160</p>
+                            </div>
+                            <div class="admin-box">
+                                <p class="orangered">Active Users</p>
+                                <img src="assets/images/Users.svg" alt="Users">
+                                <p class="orangered">90</p>
+                            </div>
+                            <div class="admin-box">
+                                <p>Galleries</p>
+                                <img src="assets/images/gallery.svg" alt="Users">
+                                <p>4</p>
+                            </div>
+                            <div class="admin-box">
+                                <p>All Blog Posts</p>
+                                <img src="assets/images/Blogs.svg" alt="Blogs">
+                                <p>900</p>
+                            </div>
+                            <div class="admin-box">
+                                <p class="orangered">New Blog Posts</p>
+                                <img src="assets/images/Blogs.svg" alt="Blogs">
+                                <p class="orangered">65</p>
+                            </div>
+                            <div class="admin-box">
+                                <p class="orangered">New Comments</p>
+                                <img src="assets/images/Comments.svg" alt="Blogs">
+                                <p class="orangered">300</p>
+                            </div>
                     </div>
                 </div>
                 <div class="login-signup-message">
@@ -81,8 +77,32 @@
                 </div>
         </section>
         <footer>
+            <div class="footer-row1">
+                <div class="about-us">
+                    <p class="footer-orangered">About Us</p>
+                    <p>Mockup Design</p>
+                    <p>Frontend & Backend Services</p>
+                    <p>Database Management</p>
+                </div>
+                <div class="follow-us">
+                    <p class="footer-orangered">Follow Us</p>
+                    <div class="social-media">
+                        <div><a target="_blank" href="https://www.linkedin.com/in/nshumbushijwenayo-samuel-726170112/"><img class="media" src="assets/images/Linkedin.svg" alt="linkedin"></a></div>
+                        <div><a target="_blank" href="https://github.com/SamuelSabasNayo/"><img class="media" src="assets/images/Github.svg" alt="github"></a></div>
+                        <div><a target="_blank" href="https://twitter.com/samuel_nayo"><img class="media" src="assets/images/Twitter.svg" alt="twitter"></a></div>
+                        <div><a target="_blank" href="https://web.facebook.com/samuelsabas.nshumbushijwenayo.3/"><img class="media" src="assets/images/Facebook.svg" alt="facebook"></a></div>
+                    </div>
+                </div>
+                <div class="contact-us">
+                    <p class="footer-orangered">Contact Us</p>
+                    <p>Email: nshusamuel1@gmail.com</p>
+                    <p>Phone: (+250) 787814449</p>
+                    <p>Kigali, Rwanda</p>
+                    <p>KG 03 RD, Kigali</p>
+                </div>
+            </div>
             <div class="copy-right">
-                <p>Sam Web Design, Copy-right &copy;2020</p>
+                <p>&copy; 2020 | Sam Web Design | All Right Reserved.</p>
             </div>
         </footer>
     </div>
