--- a/login.html
+++ b/login.html
@@ -24,39 +24,59 @@
             </div>
         </header>
         <section>
-            <div class="content-wrapper">
                 <div class="content-title">
-                    <h2><span class="orangered">Login</span> <span class="dark-orange"></span></h2>
+                    <h2><span class="orangered">User</span> <span class="dark-orange">Login</span></h2>
                 </div>
-                <div class="login-content">
-                    <div class="login-holder">
-                        <div class="login-text">
-                            <p>Login <br>To <br> Build <br> Your <br> <span class="orangered">Blog Posts</span></p>
+                <div class="contact-content">
+                    <div class="contact-holder">
+                        <div class="contact-text">
+                            <p>Login To Build Your <span class="orangered">Blog Posts</span></p>
                         </div>
-                        <div class="login-form">
-                            <form action="">
-                                <div>
-                                    <label for="email">Email</label><br>
-                                    <input id="login-email" type="text" name="email"><br>
+                        <div class="contact-form">
+                            <form action="blogs-management.html">
+                                <label for="email">Email:</label>
+                                <input id="contact-email" type="text" name="email" required>
+                                <label for="name">Password</label>
+                                <input id="login-name" type="password" name="name" required>
+                                <input id="btn" type="submit" value="Send">
+                                <div class="login-admin-user">
+                                    <a href="login-admin.html">Login As Admin</a>
                                 </div>
-                                <div>
-                                    <label for="name">Password</label><br>
-                                    <input id="login-name" type="password" name="name"><br>
-                                </div>
-                                <div>
-                                    <input id="btn" type="submit" value="Login"></form>
-                                </div>
-                        </div>
+                            </form>
                         </div>
                     </div>
-                </div>
-                <div class="login-signup-message">
-                    <p>Please <span><a href="signup.html">signup</a></span> if you don't have an account</p>
+                    <div class="login-signup-message">
+                        <p>Please <span><a href="signup.html">signup</a></span> if you don't have an account</p>
+                    </div>
                 </div>
         </section>
         <footer>
+            <div class="footer-row1">
+                <div class="about-us">
+                    <p class="footer-orangered">About Us</p>
+                    <p>Mockup Design</p>
+                    <p>Frontend & Backend Services</p>
+                    <p>Database Management</p>
+                </div>
+                <div class="follow-us">
+                    <p class="footer-orangered">Follow Us</p>
+                    <div class="social-media">
+                        <div><a target="_blank" href="https://www.linkedin.com/in/nshumbushijwenayo-samuel-726170112/"><img class="media" src="assets/images/Linkedin.svg" alt="linkedin"></a></div>
+                        <div><a target="_blank" href="https://github.com/SamuelSabasNayo/"><img class="media" src="assets/images/Github.svg" alt="github"></a></div>
+                        <div><a target="_blank" href="https://twitter.com/samuel_nayo"><img class="media" src="assets/images/Twitter.svg" alt="twitter"></a></div>
+                        <div><a target="_blank" href="https://web.facebook.com/samuelsabas.nshumbushijwenayo.3/"><img class="media" src="assets/images/Facebook.svg" alt="facebook"></a></div>
+                    </div>
+                </div>
+                <div class="contact-us">
+                    <p class="footer-orangered">Contact Us</p>
+                    <p>Email: nshusamuel1@gmail.com</p>
+                    <p>Phone: (+250) 787814449</p>
+                    <p>Kigali, Rwanda</p>
+                    <p>KG 03 RD, Kigali</p>
+                </div>
+            </div>
             <div class="copy-right">
-                <p>Sam Web Design, Copy-right &copy;2020</p>
+                <p>&copy; 2020 | Sam Web Design | All Right Reserved.</p>
             </div>
         </footer>
     </div>
