--- a/blogs.html
+++ b/blogs.html
@@ -15,58 +15,113 @@
             </div>
             <div class="nav-menu">
                 <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li class="current"><a href="blogs.html">Blogs</a></li>         
-                                <!-- <li><a href="login.html">Account</a></li>          -->
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li class="current"><a href="blogs.html">Blogs</a></li>         
+                    <!-- <li><a href="login.html">Account</a></li>         -->
                 </ul>
             </div>
         </header>
         <section>
-            <div class="content-wrapper">
-                <div class="content-title">
-                    <h2><span class="orangered">My</span> <span class="dark-orange">Blogs</span></h2>
-                </div>
-                <div class="blogs-content">
-                    <div class="blogs-holder">
-                        <div class="blogs-row1">
-                            <div class="blog">
-                                <img class="blog-img" src="assets/images/blog1.svg" alt="blog1">
-                                <p>Rwanda Military Stories</p>
+            <div class="content-title">
+                <h2><span class="orangered">My</span> <span class="dark-orange">Blogs</span></h2>
+            </div>
+            <div class="blogs-content">
+                <div class="blogs-holder">
+                    <div class="blog">
+                        <a href="blog1.html">
+                            <div class="blog-box">
+                                <img class="blog-img" src="assets/images/blog1.svg" alt="blog1" width="300" height="220">
                             </div>
-                            <div class="blog">
-                                <img class="blog-img" src="assets/images/blog2.svg" alt="blog2">
-                                <p>Portifolio Website</p>
+                            <p><span class="blog-time">June 20, 2002 08:07 GMT+00200 by</span> <span class="blog-author">Adrien McArthur</span></p>
+                            <p class="blog-title">Rwanda Military Stories</p>
+                            <p class="blog-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis ex adipiscing elit. Maecenas ex.....</p>
+                        </a>
+                    </div>
+                    <div class="blog">
+                        <a href="blog2.html">
+                            <div class="blog-box">
+                                <img class="blog-img" src="assets/images/blog2.svg" alt="blog2" width="360" height="220">
                             </div>
-                            <div class="blog">
-                                <img class="blog-img" src="assets/images/blog3.svg" alt="blog3">
-                                <p>Softaware Development</p>
+                            <p><span class="blog-time">June 20, 2002 08:07 GMT+00200 by</span> <span class="blog-author">Adrien McArthur</span></p>
+                            <p class="blog-title">Portifolio Website</p>
+                            <p class="blog-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis ex adipiscing elit. Maecenas ex.....</p>
+                        </a>
+                    </div>
+                    <div class="blog">
+                        <a href="blog3.html">
+                            <div class="blog-box">
+                                <img class="blog-img" src="assets/images/blog3.svg" alt="blog3" width="360" height="220">
                             </div>
-                        </div>
-                        <div class="blogs-row2">
-                            <div class="blog">
-                                <img class="blog-img" src="assets/images/blog4.svg" alt="blog4">
-                                <p>Mechanic Tools</p>
+                            <p><span class="blog-time">June 20, 2002 08:07 GMT+00200 by</span> <span class="blog-author">Adrien McArthur</span></p>
+                            <p class="blog-title">Software Development</p>
+                            <p class="blog-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis ex adipiscing elit. Maecenas ex.....</p>
+                        </a>
+                    </div>
+                    <div class="blog">
+                        <a href="blog4.html">
+                            <div class="blog-box">
+                                <img class="blog-img" src="assets/images/blog4.svg" alt="blog4" width="360" height="220">
                             </div>
-                            <div class="blog">
-                                <img class="blog-img" src="assets/images/blog5.svg" alt="blog5">
-                                <p>Categories of Driving Licence</p>
+                            <p><span class="blog-time">June 20, 2002 08:07 GMT+00200 by</span> <span class="blog-author">Adrien McArthur</span></p>
+                            <p class="blog-title">Mechanic Tools</p>
+                            <p class="blog-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis ex adipiscing elit. Maecenas ex.....</p>
+                        </a>
+                    </div>
+                    <div class="blog">
+                        <a href="blog5.html">
+                            <div class="blog-box">
+                                <img class="blog-img" src="assets/images/blog5.svg" alt="blog5" width="360" height="220">
                             </div>
-                            <div class="blog">
-                                <img class="blog-img" src="assets/images/blog6.svg" alt="blog6">
-                                <p>Git Version Control</p>
+                            <p><span class="blog-time">June 20, 2002 08:07 GMT+00200 by</span> <span class="blog-author">Adrien McArthur</span></p>
+                            <p class="blog-title">Categories of Driving Licence</p>
+                            <p class="blog-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis ex adipiscing elit. Maecenas ex.....</p>
+                        </a>
+                    </div>
+                    <div class="blog">
+                        <a href="blog6.html">
+                            <div class="blog-box">
+                                <img class="blog-img" src="assets/images/blog6.svg" alt="blog6" width="360" height="220">
                             </div>
-                        </div>
+                            <p><span class="blog-time">June 20, 2002 08:07 GMT+00200 by</span> <span class="blog-author">Adrien McArthur</span></p>
+                            <p class="blog-title">Git Version Control</p>
+                            <p class="blog-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis ex adipiscing elit. Maecenas ex.....</p>
+                        </a>
                     </div>
                 </div>
                 <div class="login-signup-message">
                     <p>Please <span><a href="login.html">login</a></span> to your account</p>
                 </div>
+            </div>
         </section>
         <footer>
+            <div class="footer-row1">
+                <div class="about-us">
+                    <p class="footer-orangered">About Us</p>
+                    <p>Mockup Design</p>
+                    <p>Frontend & Backend Services</p>
+                    <p>Database Management</p>
+                </div>
+                <div class="follow-us">
+                    <p class="footer-orangered">Follow Us</p>
+                    <div class="social-media">
+                        <div><a target="_blank" href="https://www.linkedin.com/in/nshumbushijwenayo-samuel-726170112/"><img class="media" src="assets/images/Linkedin.svg" alt="linkedin"></a></div>
+                        <div><a target="_blank" href="https://github.com/SamuelSabasNayo/"><img class="media" src="assets/images/Github.svg" alt="github"></a></div>
+                        <div><a target="_blank" href="https://twitter.com/samuel_nayo"><img class="media" src="assets/images/Twitter.svg" alt="twitter"></a></div>
+                        <div><a target="_blank" href="https://web.facebook.com/samuelsabas.nshumbushijwenayo.3/"><img class="media" src="assets/images/Facebook.svg" alt="facebook"></a></div>
+                    </div>
+                </div>
+                <div class="contact-us">
+                    <p class="footer-orangered">Contact Us</p>
+                    <p>Email: nshusamuel1@gmail.com</p>
+                    <p>Phone: (+250) 787814449</p>
+                    <p>Kigali, Rwanda</p>
+                    <p>KG 03 RD, Kigali</p>
+                </div>
+            </div>
             <div class="copy-right">
-                <p>Sam Web Design, Copy-right &copy;2020</p>
+                <p>&copy; 2020 | Sam Web Design | All Right Reserved.</p>
             </div>
         </footer>
     </div>
