--- a/signup.html
+++ b/signup.html
@@ -7,22 +7,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <div class="wrapper">
-        <header>
-            <div class="logo-box">
-                <a href="index.html"><img class="logo" src="assets/images/Logo.svg" alt="logo"></a>
-            </div>
-            <div class="nav-menu">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="blogs.html">Blogs</a></li>         
-                    <!-- <li><a href="login.html">Account</a></li>          -->
-                </ul>
-            </div>
-        </header>
+<body onresize="windowReload()">
+    <header>
+        <div class="logo-box">
+            <a href="index.html"><img class="logo" src="assets/images/Logo.svg" alt="logo"></a>
+        </div>
+        <div class="nav-menu">
+            <div class="openMenu"><img src="assets/images/Menu.svg" alt="menu" width="55"></div>
+            <div class="closeMenu"><img src="assets/images/Close.svg" alt="close" width="55"></div>
+            <ul class="navMenuUl">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="blogs.html">Blogs</a></li>         
+            </ul>
+        </div>
+        <script src="js/script.js"></script>
+    </header>
         <section>
                 <div class="content-title">
                     <h2><span class="orangered">Signup</span> <span class="dark-orange"></span></h2>
@@ -44,9 +45,6 @@
                                 <input id="signup-conform" type="password" name="confirm-password" required>
                                 <input id="btn" type="submit" value="Signup">
                             </form>
-                        </div>
-                        <div class="login-signup-message">
-                            <p>Please <span><a href="login.html">login</a></span> if you have an account</p>
                         </div>
                     </div>
                     <div class="login-signup-message">
