--- a/contact.html
+++ b/contact.html
@@ -34,14 +34,18 @@
                             <p>Send Your Querries About <span class="orangered">Blog Posts</span></p>
                         </div>
                         <div class="contact-form">
-                            <form action="blogs.html">
+                            <!-- <form action="blogs.html"> -->
+                            <form onsubmit="event.preventDefault(); sendQuerry()" id="contact-form" action="#">
+                                <div id="form-error"></div>
                                 <label for="name">Name:</label>
-                                <input id="contact-name" type="text" name="name" required>
+                                <input id="contact-name" type="text" name="name">
                                 <label for="email">Email:</label>
-                                <input id="contact-email" type="text" name="email" required>
+                                <input id="contact-email" type="text" name="email">
+                                <div id="email-error"></div>
                                 <label for="message">Message:</label>
-                                <textarea id="contact-message" name="message" cols="20" rows="4" required></textarea>
-                                <input id="btn" type="submit" value="Send">
+                                <textarea id="contact-message" name="message" cols="20" rows="4"></textarea>
+                                <div id="querry-error"></div>
+                                <input id="submit-btn" type="submit" value="Send">
                             </form>
                         </div>
                     </div>
@@ -80,5 +84,14 @@
             </div>
         </footer>
     </div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
+    
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
+    
+    <script src="js/init-firebase.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
