--- a/login.html
+++ b/login.html
@@ -34,12 +34,17 @@
                             <p>Login To Build Your <span class="orangered">Blog Posts</span></p>
                         </div>
                         <div class="contact-form">
-                            <form action="blogs-management.html">
+                            <!-- <form action="blogs-management.html"> -->
+                            <form id="login-form" onsubmit="event.preventDefault(); login()" action="blogs-management.html">
+                                <div id="form-error"></div>
                                 <label for="email">Email:</label>
-                                <input id="contact-email" type="text" name="email" required>
-                                <label for="name">Password</label>
-                                <input id="login-name" type="password" name="name" required>
-                                <input id="btn" type="submit" value="Send">
+                                <input id="login-email" type="text" name="email">
+                                <div id="email-error"></div>
+                                <label for="password">Password</label>
+                                <div type="text" id="error-message" readonly></div>
+                                <input id="login-password" type="password" name="name">
+                                <div id="password-error"></div>
+                                <input id="submit-btn" type="submit" value="Login" data-dismiss="modal" data-toggle="modal" data-target="#blogs-management.html">
                                 <div class="login-admin-user">
                                     <a href="login-admin.html">Login As Admin</a>
                                 </div>
@@ -81,5 +86,14 @@
             </div>
         </footer>
     </div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
+    
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
+    
+    <script src="js/init-firebase.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
