--- a/signup.html
+++ b/signup.html
@@ -34,16 +34,21 @@
                             <p>Signup To Build Your <span class="orangered">Blog Posts</span></p>
                         </div>
                         <div class="contact-form">
-                            <form action="admin2.html">
+                            <form id="signup-form"
+                            onsubmit="event.preventDefault(); signUp()">
+                                <div id="form-error"></div>
                                 <label for="username">Username:</label>
-                                <input id="signup-username" type="text" name="username" required>
+                                <input id="signup-username" type="text" name="username">
                                 <label for="email">Email:</label><br>
-                                <input id="signup-email" type="text" name="email" required>
-                                <label for="name">Password:</label>
-                                <input id="signup-name" type="password" name="name" required>
-                                <label for="name">Confirm Password:</label>
-                                <input id="signup-conform" type="password" name="confirm-password" required>
-                                <input id="btn" type="submit" value="Signup">
+                                <input id="signup-email" type="text" name="email">
+                                <div id="email-error"></div>
+                                <label for="password">Password:</label>
+                                <input id="signup-password" type="password" name="name">
+                                <div id="password-error"></div>
+                                <label for="confirm-password">Confirm Password:</label>
+                                <input id="confirm-password" type="password" name="confirm-password">
+                                <div id="confirm-password-error"></div>
+                                <input id="submit-btn" type="submit" value="Signup">
                             </form>
                         </div>
                     </div>
@@ -82,5 +87,14 @@
             </div>
         </footer>
     </div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
+    
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
+    
+    <script src="js/init-firebase.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
