--- a/admin.html
+++ b/admin.html
@@ -26,7 +26,7 @@
     </header>
         <section>
                 <div class="content-title">
-                    <h2><span class="orangered">Admin</span> <span class="dark-orange">Dasboard</span></h2>
+                    <h2><span class="orangered">Admin</span> <span class="dark-orange">Dashboard</span></h2>
                 </div>
                 <div class="admin-content">
                     <div class="admin-menu">
@@ -38,6 +38,7 @@
                             <li><a href="blogs-management.html">Read Blogs</a></li>
                             <li><a href="blogs-management.html">Update Blogs</a></li>
                             <li><a href="blogs-management.html">Delete Blogs</a></li>
+                            <li><a href="admin3.html">Manage Queries</a></li>
                         </ul>
                     </div>
                     <div class="admin-holder">
@@ -113,6 +114,8 @@
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
     
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-storage.js"></script>
     
     <script src="js/init-firebase.js"></script>
     <script src="js/app.js"></script>
