--- a/admin2.html
+++ b/admin2.html
@@ -38,17 +38,24 @@
                             <li><a href="blogs-management.html">Read Blogs</a></li>
                             <li><a href="blogs-management.html">Update Blogs</a></li>
                             <li><a href="blogs-management.html">Delete Blogs</a></li>
+                            <li><a href="admin3.html">Manage Queries</a></li>
                         </ul>
                     </div>
                     
                     <div class="admin2-holder" >
-                        <form action="#" id="add-blog" onsubmit="event.preventDefault(); addBlog()">
+                        <form action="" id="add-blog" onsubmit="event.preventDefault()">
                             <input type="text" name="title" placeholder="Title">
                             <input type="text" name="author" placeholder="Author">
                             <textarea name="content" rows="20" placeholder="Content"></textarea>
-                            <input id="uploaded-file" type="file" name="file">
+                            <!-- <label for="myimg" id="upProgress">Upload Image</label> -->
+                            <input id="upload-image" type="file" name="file">
+                            <!-- <div id="img-buttons">
+                                <button id="select">Select Image</button>
+                                <button id="upload">Upload Image</button>
+                                <button id="retrieve">Retrieve Image</button>
+                            </div> -->
                             <input type="datetime-local" name="time" placeholder="Time">
-                            <input type="submit" value="Create A Blog">
+                            <input onclick="addBlog()" id="submit-image" type="submit" value="Create A Blog">
                         </form>
                     </div>
                 </div>
@@ -97,5 +104,6 @@
     
     <script src="js/init-firebase.js"></script>
     <script src="js/app.js"></script>
+    <!-- <script src="js/blogs.js"></script> -->
 </body>
 </html>
